# neural-capm

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: data_config.yaml  experiment_default.yaml  model_bnn.yaml  model_gnn.yaml  model_lstm.yaml  model_transformer.yaml
data/: DATA.md
docs/: architecture.md  methodology.md  results_summary.md
notebooks/: 01_data_exploration.ipynb  02_baseline_capm.ipynb  03_feature_matrix.ipynb  04_lstm_beta_training.ipynb  08_explainability.ipynb
paper/: main.tex
results/tables/: phase1_baseline_comparison.csv  phase1_dm_significance.csv  phase2_lstm_vs_persistence.csv
scripts/: download_data.py  run_full_pipeline.sh
src/neural_capm/data/: loaders.py  macro_features.py  preprocessing.py
src/neural_capm/evaluation/: backtest.py  metrics.py
src/neural_capm/finance/: capm.py  kalman_beta.py  rolling_beta.py
src/neural_capm/models/: lstm_beta.py  sequence_prep.py  train.py
tests/: test_backtest.py  test_capm.py  test_chronological_split.py  test_delta_sequences.py  test_dm_test.py  test_feature_scaler.py  test_full_feature_matrix.py  test_kalman_beta.py  test_lagged_beta_feature.py  test_loaders.py  test_lstm_beta.py  test_preprocessing.py  test_rolling_beta.py  test_sequence_prep.py  test_technical_features.py  test_train_pipeline.py
