# pyproject.toml
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-capm"
version = "0.1.0"
description = "Dynamic beta estimation via neural CAPM"
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]